--- a/0909.1038/cernp.tex
+++ b/0909.1038/cernp.tex
@@ -278,15 +278,15 @@ but not a completely different state like
 
 {\bf 5. Quantifying locality:} Let us now quantify the sense in which (\ref{qthree}) is close to (\ref{qtwop}) but (\ref{qfour}) is not. For the state (\ref{qtwop}) write the density matrix describing the quantum $b$, while tracing over the degrees of freedom in $M$ and $c$. Note that $b$ is entangled with $c$, but not with $M$. One finds the entanglement entropy
 \be
-S_{ent}=-tr [\rho\ln \rho]=\ln 2
+S_{\mathit{ent}}=-tr [\rho\ln \rho]=\ln 2
 \ee
 Doing the same computation for the state (\ref{qthree}) gives
 \be
-S_{ent}=-tr [\rho\ln \rho]=\ln 2-\epsilon^2(6-2\ln 2)\approx \ln 2
+S_{\mathit{ent}}=-tr [\rho\ln \rho]=\ln 2-\epsilon^2(6-2\ln 2)\approx \ln 2
 \ee
 But with the state (\ref{qfour}) we get
 \be
-S_{ent}=0
+S_{\mathit{ent}}=0
 \ee
 
   Now we can make a precise statement about the consequence of assuming locality. Consider the limit
@@ -301,7 +301,7 @@ Now we can express the notion of locality in the following  way
 \b
 {\it If we assume that the niceness conditions N give `solar system physics', then  in the limit} (\ref{limit1}) {\it we will get}
 \be
-{S_{ent}\over \ln 2}-1\ll 1
+{S_{\mathit{ent}}\over \ln 2}-1\ll 1
 \ee
 
 
@@ -589,7 +589,7 @@ We now see that our slicing of the traditional black hole geometry has forced us
 
 {\bf (1) Mixed states}:\quad  The black hole evaporates away completely. The quanta $\{ b_i\}$ have entanglement entropy
 $
-S_{ent}\sim N\ln 2\ne 0
+S_{\mathit{ent}}\sim N\ln 2\ne 0
 \label{enentropy}
 $.
 But since there is nothing left that they are entangled with, the final state is not described by any quantum wavefunction. The final state can only be described  by a density matrix.
@@ -680,7 +680,7 @@ We compute the reduced density matrix describing the $b_i$ quanta outside the ho
 \ee
 The entanglement at time $t_n$ is then
 \be
-S_{ent}(t_n)=-\sum_i |C_i|^2 \ln |C_i|^2
+S_{\mathit{ent}}(t_n)=-\sum_i |C_i|^2 \ln |C_i|^2
 \label{entone}
 \ee
 
@@ -716,7 +716,7 @@ Putting all this together,  the state (\ref{stateone}) evolves at $t_{n+1}$ to
 
 \b
 
-(4) We  wish to compute the entanglement entropy in the state (\ref{statetwo}), between the $b$ quanta that are outside the hole and the $(M,c)$ quanta that are inside the hole. The $b$ quanta outside include the $b_i$ from all steps upto $t_{n}$ as well as the quantum $b_{n+1}$ created in this last step of evolution. We now wish compute $S_{ent}(t_{n+1})$ in terms of $S_{ent}(t_n)$ given by (\ref{entone}) and the states $\psi_i^{(\alpha)}$ in (\ref{statetwo}). 
+(4) We  wish to compute the entanglement entropy in the state (\ref{statetwo}), between the $b$ quanta that are outside the hole and the $(M,c)$ quanta that are inside the hole. The $b$ quanta outside include the $b_i$ from all steps upto $t_{n}$ as well as the quantum $b_{n+1}$ created in this last step of evolution. We now wish compute $S_{\mathit{ent}}(t_{n+1})$ in terms of $S_{\mathit{ent}}(t_n)$ given by (\ref{entone}) and the states $\psi_i^{(\alpha)}$ in (\ref{statetwo}). 
 
 \b
 
@@ -1028,7 +1028,7 @@ In this case the state in the mode is the vacuum when $\lambda={M\over 100}$. Th
 
 (4) The evaporation process produces $N\sim ({M\over m_{pl}})^2$ pairs before the hole reaches a size $\sim l_{pl}$. At this point we have a large entanglement entropy, for which we can write 
 \be
-S_{ent}>{N\over 2}\ln 2
+S_{\mathit{ent}}>{N\over 2}\ln 2
 \ee
 since $\epsilon \ll 1$. Following the argument in section (\ref{haw}) we find that we are forced to mixed states/remnants (i.e. if the planck sized hole evaporates away we get a radiation state `entangled with nothing' violating quantum unitarity, and if a planck sized remnant remains, then we have to admit remnants with arbitrarily high degeneracy in the theory). 
 
@@ -1228,7 +1228,7 @@ If we wish to study not a single particle infall but the collapse of an entire s
 initial state to a generic state of the hole. Thus we have to use the `deformation operator' which take the CFT away from the orbifold point and makes it interacting. This operator twists together two strands of the string, adding an insertion of the supersymmetry operator at the vertex. Qualitatively, we can see that such an operator will take a pair of quanta in the CFT, and upon their collision, distribute their energy over several quanta. This process will therefore take a pair of high energy excitations (which would be created by a single high energy particle falling into the AdS region of the dual geometry) and convert them to lower and lower energy quanta, a process which looks like the thermalization of the initial quantum into a superposition of fuzzballs. One can ask when in the gravity theory there is enough energy to create a black hole; it was found in \cite{lm4} that this energy is such that if we distribute it into lower energy quanta in the CFT then these CFT excitations would cover the entire `effective string'.  Thus we get a simple description of black hole formation in the dual CFT: the initial excitations created by an infalling particle break up into lower energy excitations; if this process ends before the entire effective string is covered, we do not get a black hole. (The process can end before black hole formation because we have a given length for the effective strings in the initial state, and a string of a given length $L$ cannot support quanta of energy lower  than ${2\pi\over L}$.) One notes in this computation that the criterion for black hole formation depends only on the length of the components of the effective string. and not on the effective coupling. Thus this thermlization process is not `stringy', rather it involves multiple insertions of the gravitational interaction vertex in the gravity description. This suggests that the formation of fuzzballs happens when the large phase phase space of fuzzball solutions is explored by gravity interactions, and not by $\alpha'$ corrections to the metric.
 
 
-It may seem that such a computation in the CFT using  the deformation operator will be very complicated since the entire process of black hole formation will involve a large number of interactions. What helps here is that as we increase the coupling, the rate at which thermalization can take place does not keep growing: it saturates because if we wish to create quanta of energy $\omega/2$ from quanta of energy $\omega$ then the process will take a time at least $O(1/\omega)$ because of phase space constraints. Since the CFT has no intrinsic length or time scale,  the time for the mean energy $\omega$ of quanta to drop to say half its value must be determined by $\omega$ alone (if it is going to remain nonzero as the effective coupling $g_{eff}\r\infty$). Thus we get a simple picture of the thermalization process: quanta split into other quanta as fast as they can given their wavelengths, and the energy keeps getting redistributed over more and more strands of the effective string. The interesting thing here is that {\it any} strand of the effective string can interact with {\it any} other strand, so we have a huge (order $n_1n_5$) coordination number for the interaction, unlike normal physics where a particle can only talk to a few nearest neighbours. This picture agrees with the requirement in \cite{hayden} that the thermalization be exponentially fast to save the idea of complementarity; this is something that should be explored in more detail.
+It may seem that such a computation in the CFT using  the deformation operator will be very complicated since the entire process of black hole formation will involve a large number of interactions. What helps here is that as we increase the coupling, the rate at which thermalization can take place does not keep growing: it saturates because if we wish to create quanta of energy $\omega/2$ from quanta of energy $\omega$ then the process will take a time at least $O(1/\omega)$ because of phase space constraints. Since the CFT has no intrinsic length or time scale,  the time for the mean energy $\omega$ of quanta to drop to say half its value must be determined by $\omega$ alone (if it is going to remain nonzero as the effective coupling $g_{\mathit{eff}}\r\infty$). Thus we get a simple picture of the thermalization process: quanta split into other quanta as fast as they can given their wavelengths, and the energy keeps getting redistributed over more and more strands of the effective string. The interesting thing here is that {\it any} strand of the effective string can interact with {\it any} other strand, so we have a huge (order $n_1n_5$) coordination number for the interaction, unlike normal physics where a particle can only talk to a few nearest neighbours. This picture agrees with the requirement in \cite{hayden} that the thermalization be exponentially fast to save the idea of complementarity; this is something that should be explored in more detail.
 
 
 \b
@@ -1241,12 +1241,12 @@ Phase space arguments also tell us that the infinite throat of the classical 3-c
 
 We now have all the  tools that we need to put together a logical picture of black hole formation and evaporation. Suppose a shell collapses to form a black hole. The time independent states at energy $M$ are fuzzballs, with no horizon. Let us estimate a tunneling amplitude between the shell state and any of the fuzzball states. These are both macroscopically different states, so the amplitude ${\cal A}$ for this tunneling is very small, as was noted in (\ref{action}):
 \be
-{\cal A}\sim  e^{-S_{tunnel}}, ~~~S_{tunnel}~\sim~ {1\over 16\pi G}\int R~\sim~ GM^2\sim ({M\over m_p})^2
+{\cal A}\sim  e^{-S_{\mathit{tunnel}}}, ~~~S_{\mathit{tunnel}}~\sim~ {1\over 16\pi G}\int R~\sim~ GM^2\sim ({M\over m_p})^2
  \label{actionq}
 \ee
 But now comes an interesting twist: the {\it number} of fuzzball states  ${\cal N}$ that we can tunnel to is very large, being given by the Bekenstein entropy
 \be
-{\cal N}\sim e^{S_{bek}}\sim e^{GM^2}
+{\cal N}\sim e^{S_{\mathit{bek}}}\sim e^{GM^2}
 \ee
 Thus we see that the smallness of the tunneling amplitude ${\cal A}$  can be offset by the largeness of ${\cal N}$ \cite{offset}. The large entropy is of course a characteristic feature of black holes, not present in other macroscopic bodies like the sun. In any path integral we have the action, and a measure. Usually the measure factor is `small' (i.e. order $\hbar$) in its effect on macroscopic processes, but the large entropy of the black hole has made its effects comparable to the effects of the classical action, and thus invalidated classical intuition. 
 
