--- a/0909.1038/cernp.tex
+++ b/0909.1038/cernp.tex
@@ -516,7 +516,7 @@ The stretching creates  correlated pairs (labelled $b_1, c_1$) and the state on 
 \ee
 If we compute the entanglement of $b_1$ with $M, c_1$ we obtain 
 \be
-S_{entanglement}=\ln 2
+S_{\mathit{entanglement}}=\ln 2
 \ee
 
 \b
@@ -534,7 +534,7 @@ S_{entanglement}=\ln 2
 \eea
 We compute the entanglement of the set $\{b_1, b_2\}$ with $\{M, c_1, c_2\}$. We get
 \be
-S_{entanglement}=2\ln 2
+S_{\mathit{entanglement}}=2\ln 2
 \label{ent2}
 \ee
 
@@ -550,7 +550,7 @@ S_{entanglement}=2\ln 2
 \eea
 The space $\{ b_i\}$ is entangled with the remainder $M, \{ c_i\}$ with
 \be
-S_{entanglement}=N\ln 2
+S_{\mathit{entanglement}}=N\ln 2
 \label{ent}
 \ee
 
@@ -580,7 +580,7 @@ but allowing an arbitrarily high entanglement with systems far away from the obj
 
 \b
 
-It is easy to see that an object can be entangled with $S_{entanglement}=n\ln 2$ with another system only if the number of possible states of the object is $\gtrsim n$. Thus remnants have unbounded degeneracy while having energy and size within given bounds. This is {\it not} the expected behavior of quantum systems in normal physics. It has been argued that existence of remnants gives rise to loop divergences from the infinite number of possible objects circulating in the loop. 
+It is easy to see that an object can be entangled with $S_{\mathit{entanglement}}=n\ln 2$ with another system only if the number of possible states of the object is $\gtrsim n$. Thus remnants have unbounded degeneracy while having energy and size within given bounds. This is {\it not} the expected behavior of quantum systems in normal physics. It has been argued that existence of remnants gives rise to loop divergences from the infinite number of possible objects circulating in the loop. 
 
 We now see that our slicing of the traditional black hole geometry has forced us to the choose between the following possibilities:
 
@@ -597,7 +597,7 @@ But since there is nothing left that they are entangled with, the final state is
 
 \b
 
-{\bf (2) Remnants}\quad  The evolution stops when $M_{hole}\sim m_{remnant}$. Given the entanglement (\ref{ent}), we find the theory contains remnants.
+{\bf (2) Remnants}\quad  The evolution stops when $M_{{\it hole}}\sim m_{\mathit{remnant}}$. Given the entanglement (\ref{ent}), we find the theory contains remnants.
 \b
 
 Possibility (1) leads to a loss of unitarity of quantum mechanics, since a pure initial state evolved to a mixed final state. Possibility (2) is not a violation of quantum mechanics as such, but still differs from expected physics, since normally we expect only a finite number of states if both the energy and spatial extent are bounded.   The Hawking argument cannot say which of possibilities (1) and (2) will occur since the niceness conditions $N$ are violated near the endpoint of evolution. Thus we will lump both these possibilities into one which we call `mixed states/remnants'.
